# odoo-skill

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  CLAUDE.md  CORRECTIONS_LOG.md  HERMES_SETUP.md  PRESALES_SKILLS_ROADMAP.md  README.md  SETUP.md  SKILL.md  gemini-extension.json  hermes-agent.json  openclaw-agent.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
agents/: odoo-code-reviewer.md  odoo-context-gatherer.md  odoo-planner.md  odoo-presales-consultant.md  odoo-skill-finder.md  odoo-tester.md  odoo-upgrade-analyzer.md
commands/: odoo-fit-gap.md  odoo-gen-test.md  odoo-module.md  odoo-owl.md  odoo-presales-discovery.md  odoo-proposal.md  odoo-review.md  odoo-security.md  odoo-skill-update.md  odoo-test.md  odoo-upgrade.md
docs/token-killer/skills/otk-core/: Cargo.toml  SKILL.md
docs/token-killer/skills/otk-core/src/: filters.rs  gain.rs  main.rs  tee.rs  tracking.rs
scripts/: run_tests.py
skills/: SKILL_TEMPLATE.md  accounting-patterns.md  action-patterns.md  agent-api-reference.md  agent-quick-reference.md  agent-quick-start.md  assets-bundling-patterns.md  attachment-binary-patterns.md  autonomous-agent-guide.md  common-module-templates.md  computed-field-patterns.md  config-settings-patterns.md  constraint-patterns.md  context-environment-patterns.md  controller-api-patterns.md  cron-automation-patterns.md  dashboard-kpi-patterns.md  data-migration-patterns.md  domain-filter-patterns.md  end-to-end-examples.md  error-handling-patterns.md  external-api-patterns.md  (+120 more)
(+7 files in other folders)
