[package]
name = "otk"
version = "1.0.0"
edition = "2021"
authors = ["Letzdoo Team <contact@letzdoo.com>"]
description = "Odoo Token Killer - High-performance CLI proxy to minimize LLM token consumption for Odoo development. Inspired by RTK (rtk-ai/rtk)."
license = "MIT"
homepage = "https://github.com/letzdoo/claude-marketplace"
repository = "https://github.com/letzdoo/claude-marketplace"
readme = "../../README.md"
keywords = ["cli", "llm", "token", "odoo", "filter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
